--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="#f8f8f8" style="width:100%;">
           <tr>
             <td>
-              <img align="center" src="img/border.jpg" alt="" width="100%" style="background-color:#f8f8f8; color:#ffffff;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0; ">
+              <img align="center" src="img/border.jpg" alt="" width="100%" style="background-color:#f8f8f8; color:#ffffff;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0; min-height:1px">
               <br>
             </td>
           </tr>
@@ -351,7 +351,7 @@
         <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="#f8f8f8" style="width:100%;">
           <tr>
             <td>
-              <img align="center" src="img/border.jpg" alt="" width="100%" style="background-color:#f8f8f8; color:#ffffff;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0; ">
+              <img align="center" src="img/border.jpg" alt="" width="100%" style="background-color:#f8f8f8; color:#ffffff;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0; min-height:1px">
             </td>
           </tr>
         </table>
@@ -389,7 +389,7 @@
         <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="#f8f8f8" style="width:100%;">
           <tr>
             <td>
-              <img align="center" src="img/border.jpg" alt="" width="100%" style="background-color:#f8f8f8; color:#ffffff;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0; ">
+              <img align="center" src="img/border.jpg" alt="" width="100%" style="background-color:#f8f8f8; color:#ffffff;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0; min-height:1px">
               <br>
               <br>
             </td>
