--- a/index.html
+++ b/index.html
@@ -16,10 +16,19 @@
       display: inline-block;
       vertical-align: top;
     }
+    .menu {
+      display: inline-block;
+      vertical-align: top;
+    }
+    .social {
+      display: inline-block;
+      vertical-align: top;
+    }
     @media only screen and (max-width: 700px) {
-      table[class="steps"] {display: table-caption;}
       table[class="img"] {display: table;}
       table[class="block"] {display: table; width: 100%;}
+      table[class="menu"] {display: table; width: 90%;}
+      table[class="social"] {display: table; width: 60%;}
     }
   </style>
 </head>
@@ -42,7 +51,7 @@
                 </tr>
               </table>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <table class="block" width="23%" align="" cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff" style="">
+              <table class="menu" width="23%" align="" cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff" style="">
                 <tr>
                   <td align="center">
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -395,31 +404,37 @@
             </td>
           </tr>
         </table>
-        <table class="block" width="25%" align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="#f8f8f8" style="font-size: 0;">
-          <tr>
-            <td width="54px">
-              <a href="" style="font-size: 14px; border:0; outline:none; text-decoration:none; color:#1eb128;">
-                <img align="center" src="img/google.jpg" alt="google" width="100%" style="background-color:#ffffff; color:#000000;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0;max-width: 47px"></a>
-            </td>
-            <td width="54px">
-              <a href="" style="font-size: 14px; border:0; outline:none; text-decoration:none; color:#1eb128;">
-                <img align="center" src="img/twit.jpg" alt="twitter" width="100%" style="background-color:#ffffff; color:#000000;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0;max-width: 47px"></a>
-            </td>
-            <td width="54px">
-              <a href="" style="font-size: 14px; border:0; outline:none; text-decoration:none; color:#1eb128;">
-                <img align="center" src="img/fb.jpg" alt="facebook" width="100%" style="background-color:#ffffff; color:#000000;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0;max-width: 47px"></a>
-            </td>
-          </tr>
-        </table>
-        <table class="block" width="54%" align="right" cellpadding="0" cellspacing="0" border="0" bgcolor="#f8f8f8">
+        <table  width="100%" align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="#f8f8f8" style="">
           <tr>
             <td>
-            <br>
-              <p align="center" style="max-width:100%; color:#000000;font-size:12px;line-height:16px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0; text-align: center;">
-                Sie erhalten diese E-Mail, weil Sie den Newsletter abonniert haben 
-                <br>
-                zoobio.de Sie können mit einem <a href="" style="border:0; outline:none; text-decoration:none;color: #00b0a8">Klick</a> abmelden.
-              </p>
+              <table class="social" width="25%" align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="#f8f8f8" style="font-size: 0;">
+                <tr>
+                  <td width="54px">
+                    <a href="" style="font-size: 14px; border:0; outline:none; text-decoration:none; color:#1eb128;">
+                      <img align="center" src="img/google.jpg" alt="google" width="100%" style="background-color:#ffffff; color:#000000;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0;max-width: 47px"></a>
+                  </td>
+                  <td width="54px">
+                    <a href="" style="font-size: 14px; border:0; outline:none; text-decoration:none; color:#1eb128;">
+                      <img align="center" src="img/twit.jpg" alt="twitter" width="100%" style="background-color:#ffffff; color:#000000;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0;max-width: 47px"></a>
+                  </td>
+                  <td width="54px">
+                    <a href="" style="font-size: 14px; border:0; outline:none; text-decoration:none; color:#1eb128;">
+                      <img align="center" src="img/fb.jpg" alt="facebook" width="100%" style="background-color:#ffffff; color:#000000;font-size:22px; font-weight:bold; font-family: Arial, Helvetica, sans-serif;margin-left:0;margin-right:0;margin-top:0;margin-bottom:0;padding-left:0;padding-right:0;padding-top:0;padding-bottom:0;max-width: 47px"></a>
+                  </td>
+                </tr>
+              </table>
+              <table class="block" width="54%" align="right" cellpadding="0" cellspacing="0" border="0" bgcolor="#f8f8f8">
+                <tr>
+                  <td>
+                  <br>
+                    <p align="center" style="max-width:100%; color:#000000;font-size:12px;line-height:16px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0; text-align: center;">
+                      Sie erhalten diese E-Mail, weil Sie den Newsletter abonniert haben 
+                      <br>
+                      zoobio.de Sie können mit einem <a href="" style="border:0; outline:none; text-decoration:none;color: #00b0a8">Klick</a> abmelden.
+                    </p>
+                  </td>
+                </tr>
+              </table>
             </td>
           </tr>
         </table>
@@ -439,10 +454,19 @@
       display: inline-block;
       vertical-align: top;
     }
+    .menu {
+      display: inline-block;
+      vertical-align: top;
+    }
+    .social {
+      display: inline-block;
+      vertical-align: top;
+    }
     @media only screen and (max-width: 700px) {
-      table[class="steps"] {display: table-caption;}
       table[class="img"] {display: table;}
       table[class="block"] {display: table; width: 100%;}
+      table[class="menu"] {display: table; width: 90%;}
+      table[class="social"] {display: table; width: 60%;}
     }
   </style>
 </body>
