text-align edit

--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@
       display: inline-block;
       vertical-align: top;
     }
+    .text-left {
+      text-align: left;
+    }
+    .text-right {
+      text-align: right;
+    }
     @media only screen and (max-width: 700px) {
       table[class="img"] {display: table;}
       table[class="block"] {display: table; width: 100%;}
       table[class="menu"] {display: table; width: 90%;}
       table[class="social"] {display: table; width: 60%;}
+      p[class="text-left"] {text-align: center;}
+      p[class="text-right"] {text-align: center;}
     }
   </style>
 </head>
@@ -92,7 +100,7 @@
               <table class="block" width="50%" align="left" cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff" style="">
                 <tr>
                   <td>
-                    <p align="left" style="max-width:100%; color:#000000;font-size:17px;line-height:21px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0;">
+                    <p class="text-left" align="left" style="max-width:100%; color:#000000;font-size:17px;line-height:21px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0;">
                       <span style="font-size: 24px">Lieber Mr. Ivan!</span>
                       <br>
                       <br>
@@ -131,10 +139,10 @@
                     <table class="block" width="33%" align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="#fefefe" style="vertical-align: middle">
                       <tr>
                         <td>
-                          <p align="left" style="max-width:100%; color:#3e77aa;font-size:17px;line-height:21px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0; text-align: center">
+                          <p class="text-left" align="left" style="max-width:100%; color:#3e77aa;font-size:15px;line-height:21px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0;">
                             <span style="font-weight: bold">Mini Senior 500 mg</span>
                             <br>
-                            <span style="color: #000000">Preis: 66.43 €</span>
+                            <span style="color: #000000; font-size: 14px">Preis: 66.43 €</span>
                           </p>
                         </td>
                       </tr>
@@ -173,14 +181,14 @@
                     <table class="block" width="33%" align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="#fefefe" style="vertical-align: middle">
                       <tr>
                         <td>
-                          <p align="left" style="max-width:100%; color:#3e77aa;font-size:17px;line-height:21px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0; text-align: center">
-                            <span style="font-weight: bold">3x Mini Senior 500 mg</span>
+                          <p class="text-left" align="left" style="max-width:100%; color:#3e77aa;font-size:15px;line-height:14px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0;">
+                            <span style="font-weight: bold; line-height: 32px">3x Mini Senior 500 mg</span>
                             <br>
-                            <span style="color:#999999">Alter Preis: <span style="text-decoration: line-through;">83.04</span></span>
+                            <span style="color:#999999;font-size: 14px">Alter Preis: <span style="text-decoration: line-through;">83.04</span></span>
                             <br>
-                            <span style="color: #000000">Preis: 66.43 €</span>
+                            <span style="color: #000000;font-size: 14px">Preis: 66.43 €</span>
                             <br>
-                            <span style="color: #000000">Economy:</span> <span style="color: #f36c28">16.61 €</span>
+                            <span style="color: #000000;font-size: 14px">Economy:</span> <span style="color: #f36c28">16.61 €</span>
                           </p>
                         </td>
                       </tr>
@@ -216,17 +224,18 @@
                         </td>
                       </tr>
                     </table>
-                    <table class="block" width="33%" align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="#fefefe" style="vertical-align: middle">
+                    <table class="block" width="33%" align="center" cellpadding="0" cellspacing="0" border="0" bgcolor="#fefefe" style="vertical-align: top">
                       <tr>
                         <td>
-                          <p align="left" style="max-width:100%; color:#3e77aa;font-size:17px;line-height:21px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0; text-align: center">
-                            <span style="font-weight: bold">6x Mini Senior 500 mg</span>
+                        <br>
+                          <p class="text-left" align="left" style="max-width:100%; color:#3e77aa;font-size:15px;line-height:14px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0;">
+                            <span style="font-weight: bold; line-height: 32px;">6x Mini Senior 500 mg</span>
                             <br>
-                            <span style="color:#999999">Alter Preis: <span style="text-decoration: line-through;">83.04</span></span>
+                            <span style="color:#999999;font-size: 14px">Alter Preis: <span style="text-decoration: line-through;">83.04</span></span>
                             <br>
-                            <span style="color: #000000">Preis: 66.43 €</span>
+                            <span style="color: #000000;font-size: 14px">Preis: 66.43 €</span>
                             <br>
-                            <span style="color: #000000">Economy:</span> <span style="color: #f36c28">16.61 €</span>
+                            <span style="color: #000000;font-size: 14px">Economy:</span> <span style="color: #f36c28">16.61 €</span>
                           </p>
                         </td>
                       </tr>
@@ -371,7 +380,7 @@
               <table class="block" width="50%" align="left" cellpadding="0" cellspacing="0" border="0" bgcolor="#f8f8f8" style="">
                 <tr>
                   <td>
-                    <p align="left" style="max-width:100%; color:#000000;font-size:12px;line-height:16px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0; text-align: center;">
+                    <p class="text-left" align="left" style="max-width:100%; color:#000000;font-size:12px;line-height:16px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0; ">
                     <span style="font-size: 16px">Kontakt</span>
                     <br>
                     <br>
@@ -427,7 +436,7 @@
                 <tr>
                   <td>
                   <br>
-                    <p align="center" style="max-width:100%; color:#000000;font-size:12px;line-height:16px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0; text-align: center;">
+                    <p class="text-right" align="center" style="max-width:100%; color:#000000;font-size:12px;line-height:16px;font-family: Arial, Helvetica, sans-serif; margin-bottom:0; margin-top:0; margin-left:0; margin-right:0; padding-bottom:0; padding-top:0; padding-left:0; padding-right:0;">
                       Sie erhalten diese E-Mail, weil Sie den Newsletter abonniert haben 
                       <br>
                       zoobio.de Sie können mit einem <a href="" style="border:0; outline:none; text-decoration:none;color: #00b0a8">Klick</a> abmelden.
@@ -462,11 +471,19 @@
       display: inline-block;
       vertical-align: top;
     }
+    .text-left {
+      text-align: left;
+    }
+    .text-right {
+      text-align: right;
+    }
     @media only screen and (max-width: 700px) {
       table[class="img"] {display: table;}
       table[class="block"] {display: table; width: 100%;}
       table[class="menu"] {display: table; width: 90%;}
       table[class="social"] {display: table; width: 60%;}
+      p[class="text-left"] {text-align: center;}
+      p[class="text-right"] {text-align: center;}
     }
   </style>
 </body>
